tests/verify/fail/assert-false.rs
// error-pattern: error

extern crate prusti_contracts;

fn main() {
    assert!(false);
}
